updated campaign creation as per Alexas feedback

--- a/notebooks/aduriseti_shared/account_structure.ipynb
+++ b/notebooks/aduriseti_shared/account_structure.ipynb
@@ -15979,16 +15979,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(312, 5)"
+       "(122, 5)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16035,12 +16035,28 @@
     "# TODO: \n",
     "# - only do this if os is not already in the split\n",
     "camp_targeting_df[\"operating_system\"] = None\n",
+    "# def yield_os_targeting_df():\n",
+    "#     for os in TABOOLA_OS_DOMAIN:\n",
+    "#         camp_targeting_df[\"operating_system\"] = camp_targeting_df[\"operating_system\"] \\\n",
+    "#             .map(lambda _: {\"INCLUDE\": os})\n",
+    "#         yield camp_targeting_df\n",
+    "device2os = {\n",
+    "    'DESK': ['Mac_OS_X', 'Linux', 'Windows'],\n",
+    "    'PHON': ['iOS', 'Android'],\n",
+    "    'TBLT': ['iPadOS','Android'],\n",
+    "}\n",
     "def yield_os_targeting_df():\n",
-    "    for os in TABOOLA_OS_DOMAIN:\n",
-    "        camp_targeting_df[\"operating_system\"] = camp_targeting_df[\"operating_system\"] \\\n",
-    "            .map(lambda _: {\"INCLUDE\": os})\n",
-    "        yield camp_targeting_df\n",
+    "    for device,osseq in device2os.items():\n",
+    "        devI = device == \\\n",
+    "            camp_targeting_df[\"device\"] \\\n",
+    "                .apply(lambda d: [*d.values()][0])\n",
+    "        for os in osseq:\n",
+    "            camp_targeting_df[\"operating_system\"] = \\\n",
+    "                camp_targeting_df[\"operating_system\"] \\\n",
+    "                    .map(lambda _: {\"INCLUDE\": os})\n",
+    "            yield camp_targeting_df[devI]\n",
     "camp_targeting_df = pd.concat(yield_os_targeting_df(),)\n",
+    "camp_targeting_df.to_csv(f\"_.csv\")\n",
     "camp_targeting_df.shape"
    ]
   },
@@ -16116,16 +16132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "campaign_daily_budget: 30.0\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -16141,118 +16150,14 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "{'platform_targeting': {'type': 'INCLUDE', 'value': ['DESK']},\n",
-       " 'sub_country_targeting': {'type': 'INCLUDE',\n",
-       "  'value': ['MT',\n",
-       "   'ND',\n",
-       "   'AR',\n",
-       "   'ID',\n",
-       "   'KY',\n",
-       "   'IA',\n",
-       "   'MS',\n",
-       "   'NM',\n",
-       "   'ME',\n",
-       "   'OK',\n",
-       "   'SD',\n",
-       "   'IN',\n",
-       "   'DE',\n",
-       "   'CT',\n",
-       "   'WI',\n",
-       "   'NV',\n",
-       "   'DC',\n",
-       "   'AK',\n",
-       "   'RI',\n",
-       "   'NE',\n",
-       "   'OR',\n",
-       "   'WY',\n",
-       "   'HI',\n",
-       "   'WV',\n",
-       "   'MA',\n",
-       "   'MN',\n",
-       "   'MO',\n",
-       "   'VT',\n",
-       "   'AL',\n",
-       "   'SC',\n",
-       "   'LA',\n",
-       "   'AZ',\n",
-       "   'KS',\n",
-       "   'UT',\n",
-       "   'NH']},\n",
-       " 'os_targeting': {'type': 'INCLUDE', 'value': [{'os_family': 'Android'}]}}"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TOTAL_BUDGET = 500\n",
-    "DEFAULT_CPC = 1.00\n",
-    "campaign_daily_budget = max(30.,TOTAL_BUDGET / len(camp_targeting_df))\n",
-    "campaign_daily_budget = np.round(campaign_daily_budget,2)\n",
-    "print(\"campaign_daily_budget:\",campaign_daily_budget)\n",
-    "CAMPAIGN_TEMPLATE = {\n",
-    "    \"branding_text\": \"HealthCare.com\",\n",
-    "    \"tracking_code\": \"SRC=720&utm_medium=native&utm_source=taboola&utm_campaign=Prospecting_Desktop_RON_MedicareSecrets_Map_247&utm_content={campaign_item_id}&cpc={cpc}&ts={timestamp}&utm_term={site}&iv=__iv_p_17_a_{campaign_id}_pi_{site_id}_d_{platform}_se_{site}_f_{campaign_item_id}_z_3_vi__\",\n",
-    "    \"pricing_model\": \"CPC\",\n",
-    "    \"cpc\": DEFAULT_CPC,\n",
-    "    \"daily_cap\": campaign_daily_budget,\n",
-    "    \"daily_ad_delivery_model\": \"STRICT\",\n",
-    "    \"spending_limit\": 100000.,\n",
-    "    \"spending_limit_model\": \"ENTIRE\",\n",
-    "    \"bid_type\": \"FIXED\",\n",
-    "    \"marketing_objective\": \"LEADS_GENERATION\",\n",
-    "    \"country_targeting\": {\n",
-    "        \"type\": \"INCLUDE\",\n",
-    "        \"value\": [\"US\"],\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "def taboola_targetting_fields(r):\n",
-    "    def pivot(o):\n",
-    "        (t,v),*_ = o.items()\n",
-    "        return {\n",
-    "            \"type\": t,\n",
-    "            \"value\": [*v] if isinstance(v,(list,tuple,set)) else [v]\n",
-    "        }\n",
-    "    targetting_fields = {}\n",
-    "    if \"device\" in r:\n",
-    "        targetting_fields[\"platform_targeting\"] = pivot(r[\"device\"])\n",
-    "    if \"state\" in r:\n",
-    "        targetting_fields[\"sub_country_targeting\"] = pivot(r[\"state\"])\n",
-    "    if \"dma\" in r:\n",
-    "        targetting_fields[\"dma_country_targeting\"] = pivot(r[\"dma\"])\n",
-    "    if \"operating_system\" in r:\n",
-    "        (t,v),*_ = r[\"operating_system\"].items()\n",
-    "        targetting_fields[\"os_targeting\"] = {\n",
-    "            \"type\": \"INCLUDE\",\n",
-    "            \"value\": [\n",
-    "                {\n",
-    "                    \"os_family\": v\n",
-    "                },\n",
-    "            ],\n",
-    "        }\n",
-    "    return targetting_fields\n",
-    "ipydisp(camp_attr_df.apply(taboola_targetting_fields,axis=1).head())\n",
-    "taboola_targetting_fields(camp_targeting_df.iloc[0,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "campaign_daily_budget: 30.0\n",
       "{\n",
-      "  \"name\": \"[GOOGLE]_<state_device>_campaign_0\",\n",
+      "  \"name\": \"Prospecting_Desktop_RON_MedicareSecrets\",\n",
       "  \"branding_text\": \"HealthCare.com\",\n",
-      "  \"tracking_code\": \"SRC=720&utm_medium=native&utm_source=taboola&utm_campaign=Prospecting_Desktop_RON_MedicareSecrets_Map_247&utm_content={campaign_item_id}&cpc={cpc}&ts={timestamp}&utm_term={site}&iv=__iv_p_17_a_{campaign_id}_pi_{site_id}_d_{platform}_se_{site}_f_{campaign_item_id}_z_3_vi__\",\n",
+      "  \"tracking_code\": \"SRC=720&utm_medium=native&utm_source=taboola&utm_campaign=Prospecting_Desktop_RON_MedicareSecrets&utm_content={campaign_item_id}&cpc={cpc}&ts={timestamp}&utm_term={site}&iv=__iv_p_17_a_{campaign_id}_pi_{site_id}_d_{platform}_se_{site}_f_{campaign_item_id}_z_3_vi__\",\n",
       "  \"pricing_model\": \"CPC\",\n",
       "  \"cpc\": 1.0,\n",
       "  \"daily_cap\": 30.0,\n",
@@ -16317,7 +16222,7 @@
       "    \"type\": \"INCLUDE\",\n",
       "    \"value\": [\n",
       "      {\n",
-      "        \"os_family\": \"Android\"\n",
+      "        \"os_family\": \"Mac_OS_X\"\n",
       "      }\n",
       "    ]\n",
       "  }\n",
@@ -16326,12 +16231,74 @@
     }
    ],
    "source": [
+    "def taboola_targetting_fields(r):\n",
+    "    def pivot(o):\n",
+    "        (t,v),*_ = o.items()\n",
+    "        return {\n",
+    "            \"type\": t,\n",
+    "            \"value\": [*v] if isinstance(v,(list,tuple,set)) else [v]\n",
+    "        }\n",
+    "    targetting_fields = {}\n",
+    "    if \"device\" in r:\n",
+    "        targetting_fields[\"platform_targeting\"] = pivot(r[\"device\"])\n",
+    "    if \"state\" in r:\n",
+    "        targetting_fields[\"sub_country_targeting\"] = pivot(r[\"state\"])\n",
+    "    if \"dma\" in r:\n",
+    "        targetting_fields[\"dma_country_targeting\"] = pivot(r[\"dma\"])\n",
+    "    if \"operating_system\" in r:\n",
+    "        (t,v),*_ = r[\"operating_system\"].items()\n",
+    "        targetting_fields[\"os_targeting\"] = {\n",
+    "            \"type\": \"INCLUDE\",\n",
+    "            \"value\": [\n",
+    "                {\n",
+    "                    \"os_family\": v\n",
+    "                },\n",
+    "            ],\n",
+    "        }\n",
+    "    return targetting_fields\n",
+    "ipydisp(camp_attr_df.apply(taboola_targetting_fields,axis=1).head())\n",
+    "taboola_targetting_fields(camp_targeting_df.iloc[0,:])\n",
+    "\n",
+    "TOTAL_BUDGET = 500\n",
+    "DEFAULT_CPC = 1.00\n",
+    "campaign_daily_budget = max(30.,TOTAL_BUDGET / len(camp_targeting_df))\n",
+    "campaign_daily_budget = np.round(campaign_daily_budget,2)\n",
+    "print(\"campaign_daily_budget:\",campaign_daily_budget)\n",
+    "def get_base_campaign(name):\n",
+    "    campaign_json = {\n",
+    "        \"name\": name,\n",
+    "        \"branding_text\": \"HealthCare.com\",\n",
+    "        \"tracking_code\": (\n",
+    "            \"SRC=720&\"\n",
+    "            \"utm_medium=native&\"\n",
+    "            \"utm_source=taboola&\"\n",
+    "            f\"utm_campaign={name}&\"\n",
+    "            \"utm_content={campaign_item_id}&\"\n",
+    "            \"cpc={cpc}&\"\n",
+    "            \"ts={timestamp}\"\n",
+    "            \"&utm_term={site}&\"\n",
+    "            \"iv=__iv_p_17_a_{campaign_id}_pi_{site_id}_d_{platform}_se_{site}_f_{campaign_item_id}_z_3_vi__\"\n",
+    "        ),\n",
+    "        \"pricing_model\": \"CPC\",\n",
+    "        \"cpc\": DEFAULT_CPC,\n",
+    "        \"daily_cap\": campaign_daily_budget,\n",
+    "        \"daily_ad_delivery_model\": \"STRICT\",\n",
+    "        \"spending_limit\": 100000.,\n",
+    "        \"spending_limit_model\": \"ENTIRE\",\n",
+    "        \"bid_type\": \"FIXED\",\n",
+    "        \"marketing_objective\": \"LEADS_GENERATION\",\n",
+    "        \"country_targeting\": {\n",
+    "            \"type\": \"INCLUDE\",\n",
+    "            \"value\": [\"US\"],\n",
+    "        },\n",
+    "    }\n",
+    "    return campaign_json\n",
+    "\n",
     "dest_accnt = id2accnt[TEST_ACCNT_ID]\n",
     "i = 0\n",
     "campaign_json = {\n",
-    "    \"name\": f\"[{traffic_source}]_<{split}>_campaign_{i}\",\n",
-    "#     \"start_date\": (TODAY + 1*DAY).__str__(),\n",
-    "    **CAMPAIGN_TEMPLATE,\n",
+    "#     **get_base_campaign(f\"[{traffic_source}]_<{split}>_campaign_0\"),\n",
+    "    **get_base_campaign(\"Prospecting_Desktop_RON_MedicareSecrets\"),\n",
     "    **taboola_targetting_fields(camp_targeting_df.iloc[i]),\n",
     "}\n",
     "print(json.dumps(campaign_json,indent=2))"
@@ -16353,165 +16320,8 @@
     "    headers=client.authorization_header,)\n",
     "resp.raise_for_status()\n",
     "\n",
-    "new_camp = resp.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '11485184',\n",
-       " 'advertiser_id': 'healthcareinc-sc2',\n",
-       " 'name': '[GOOGLE]_<state_device>_campaign_0',\n",
-       " 'branding_text': 'HealthCare.com',\n",
-       " 'tracking_code': 'SRC=720&utm_medium=native&utm_source=taboola&utm_campaign=Prospecting_Desktop_RON_MedicareSecrets_Map_247&utm_content={campaign_item_id}&cpc={cpc}&ts={timestamp}&utm_term={site}&iv=__iv_p_17_a_{campaign_id}_pi_{site_id}_d_{platform}_se_{site}_f_{campaign_item_id}_z_3_vi__',\n",
-       " 'pricing_model': 'CPC',\n",
-       " 'cpc': 1.0,\n",
-       " 'safety_rating': '-',\n",
-       " 'daily_cap': 30.0,\n",
-       " 'daily_ad_delivery_model': 'STRICT',\n",
-       " 'spending_limit': 100000.0,\n",
-       " 'spending_limit_model': 'ENTIRE',\n",
-       " 'cpa_goal': 0.0,\n",
-       " 'country_targeting': {'type': 'INCLUDE', 'value': ['US'], 'href': None},\n",
-       " 'sub_country_targeting': {'type': 'INCLUDE',\n",
-       "  'value': ['MA',\n",
-       "   'SC',\n",
-       "   'SD',\n",
-       "   'WI',\n",
-       "   'ID',\n",
-       "   'OK',\n",
-       "   'IA',\n",
-       "   'ME',\n",
-       "   'NM',\n",
-       "   'DC',\n",
-       "   'DE',\n",
-       "   'HI',\n",
-       "   'NV',\n",
-       "   'LA',\n",
-       "   'ND',\n",
-       "   'AR',\n",
-       "   'CT',\n",
-       "   'VT',\n",
-       "   'RI',\n",
-       "   'NE',\n",
-       "   'AZ',\n",
-       "   'NH',\n",
-       "   'OR',\n",
-       "   'IN',\n",
-       "   'MS',\n",
-       "   'WV',\n",
-       "   'UT',\n",
-       "   'MN',\n",
-       "   'WY',\n",
-       "   'MO',\n",
-       "   'AL',\n",
-       "   'KY',\n",
-       "   'MT',\n",
-       "   'KS',\n",
-       "   'AK'],\n",
-       "  'href': None},\n",
-       " 'dma_country_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'region_country_targeting': {'type': 'INCLUDE',\n",
-       "  'value': ['MA',\n",
-       "   'SC',\n",
-       "   'SD',\n",
-       "   'WI',\n",
-       "   'ID',\n",
-       "   'OK',\n",
-       "   'IA',\n",
-       "   'ME',\n",
-       "   'NM',\n",
-       "   'DC',\n",
-       "   'DE',\n",
-       "   'HI',\n",
-       "   'NV',\n",
-       "   'LA',\n",
-       "   'ND',\n",
-       "   'AR',\n",
-       "   'CT',\n",
-       "   'VT',\n",
-       "   'RI',\n",
-       "   'NE',\n",
-       "   'AZ',\n",
-       "   'NH',\n",
-       "   'OR',\n",
-       "   'IN',\n",
-       "   'MS',\n",
-       "   'WV',\n",
-       "   'UT',\n",
-       "   'MN',\n",
-       "   'WY',\n",
-       "   'MO',\n",
-       "   'AL',\n",
-       "   'KY',\n",
-       "   'MT',\n",
-       "   'KS',\n",
-       "   'AK'],\n",
-       "  'href': None},\n",
-       " 'city_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'postal_code_targeting': {'type': 'ALL',\n",
-       "  'value': None,\n",
-       "  'href': 'https://backstage.taboola.com/backstage/api/1.0/healthcareinc-sc2/campaigns/11485184/targeting/postal_code'},\n",
-       " 'contextual_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'platform_targeting': {'type': 'INCLUDE', 'value': ['DESK'], 'href': None},\n",
-       " 'publisher_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'auto_publisher_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'os_targeting': {'type': 'INCLUDE',\n",
-       "  'value': [{'os_family': 'Android', 'sub_categories': []}],\n",
-       "  'href': None},\n",
-       " 'connection_type_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'publisher_bid_modifier': {'values': []},\n",
-       " 'publisher_bid_strategy_modifiers': {'values': []},\n",
-       " 'campaign_profile': None,\n",
-       " 'comments': '',\n",
-       " 'spent': 0.0,\n",
-       " 'bid_type': 'FIXED',\n",
-       " 'bid_strategy': 'FIXED',\n",
-       " 'traffic_allocation_mode': 'OPTIMIZED',\n",
-       " 'campaign_groups': None,\n",
-       " 'start_date': None,\n",
-       " 'end_date': '9999-12-31',\n",
-       " 'start_date_in_utc': None,\n",
-       " 'end_date_in_utc': '9999-12-31 23:59:59',\n",
-       " 'traffic_allocation_ab_test_end_date': None,\n",
-       " 'approval_state': 'PENDING',\n",
-       " 'is_active': True,\n",
-       " 'status': 'PENDING_APPROVAL',\n",
-       " 'audience_segments_multi_targeting': {'state': 'ALL',\n",
-       "  'value': None,\n",
-       "  'href': 'https://backstage.taboola.com/backstage/api/1.0/healthcareinc-sc2/campaigns/11485184/targeting/audience_segments'},\n",
-       " 'contextual_segments_targeting': {'state': 'ALL',\n",
-       "  'value': None,\n",
-       "  'href': 'https://backstage.taboola.com/backstage/api/1.0/healthcareinc-sc2/campaigns/11485184/targeting/contextual_segments'},\n",
-       " 'custom_audience_targeting': {'state': 'ALL',\n",
-       "  'value': None,\n",
-       "  'href': 'https://backstage.taboola.com/backstage/api/1.0/healthcareinc-sc2/campaigns/11485184/targeting/custom_audience'},\n",
-       " 'marking_label_multi_targeting': {'state': 'ALL',\n",
-       "  'value': None,\n",
-       "  'href': 'https://backstage.taboola.com/backstage/api/1.0/healthcareinc-sc2/campaigns/11485184/targeting/marking_labels'},\n",
-       " 'lookalike_audience_targeting': {'state': 'ALL',\n",
-       "  'value': None,\n",
-       "  'href': 'https://backstage.taboola.com/backstage/api/1.0/healthcareinc-sc2/campaigns/11485184/targeting/lookalike_audience'},\n",
-       " 'marketing_objective': 'LEADS_GENERATION',\n",
-       " 'verification_pixel': None,\n",
-       " 'viewability_tag': None,\n",
-       " 'activity_schedule': {'mode': 'ALWAYS', 'rules': [], 'time_zone': None},\n",
-       " 'policy_review': {'reject_reason': None},\n",
-       " 'browser_targeting': {'type': 'ALL', 'value': [], 'href': None},\n",
-       " 'type': 'PAID'}"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "new_camp = resp.json()\n",
+    "\n",
     "new_camp"
    ]
   },
